Add max file size to env vars in web

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "globalEnv": [
     "NEXT_PUBLIC_API_BASE_URL",
     "NEXT_PUBLIC_DEPLOY_URL",
+    "MAX_FILE_SIZE",
     "API_BASE_URL",
     "NEXT_PUBLIC_SENTRY_DSN",
     "SENTRY_AUTH_TOKEN",
