--- a/web/.env.example
+++ b/web/.env.example
@@ -2,3 +2,5 @@
 NEXT_PUBLIC_ENABLE_OAUTH=0
 # Public boards deploy URL
 NEXT_PUBLIC_DEPLOY_URL="http://localhost/spaces"
+# Maximum file upload limit
+MAX_FILE_SIZE = 5 * 1024 * 1024
