--- a/web/Dockerfile.web
+++ b/web/Dockerfile.web
@@ -15,6 +15,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 ARG NEXT_PUBLIC_API_BASE_URL=""
 ARG NEXT_PUBLIC_DEPLOY_URL=""
+ARG MAX_FILE_SIZE=""
 
 # First install the dependencies (as they change less often)
 COPY .gitignore .gitignore
@@ -28,6 +29,7 @@ COPY turbo.json turbo.json
 USER root
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_DEPLOY_URL=$NEXT_PUBLIC_DEPLOY_URL
+ENV MAX_FILE_SIZE = $MAX_FILE_SIZE
 
 RUN yarn turbo run build --filter=web
 
@@ -49,8 +51,10 @@ COPY --from=installer --chown=captain:plane /app/web/.next ./web/.next
 
 ARG NEXT_PUBLIC_API_BASE_URL=""
 ARG NEXT_PUBLIC_DEPLOY_URL=""
+ARG MAX_FILE_SIZE=""
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_DEPLOY_URL=$NEXT_PUBLIC_DEPLOY_URL
+ENV MAX_FILE_SIZE=$MAX_FILE_SIZE
 
 USER root
 COPY start.sh /usr/local/bin/
